--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
